# nestbox-ai-cli-tools

./: .gitignore  .nestboxrc  GETTING_STARTED.md  README.md  nestbox.config.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
.github/workflows/: generate-client.yml  test.yml
src/: index.ts
src/agents/docProc/: CONFIG_GUIDE.md  EVAL_GUIDE.md  SYSTEM_PROMPT.md  anthropic.ts  config.schema.yaml  eval-test-cases.schema.yaml  index.ts  openai.ts
src/agents/reportGenerator/: REPORT_CONFIG_GUIDE.md  SYSTEM_PROMPT.md  annual_report_10k.yaml  anthropic.ts  index.ts  (+3 more)
src/commands/: agent.ts  auth.ts  compute.ts  docProc.ts  document.ts  generate.ts  image.ts  project.ts  projects.ts
src/types/: agentType.ts  agentYaml.ts  auth.ts  statusMapping.ts
src/utils/: agent.ts  api.ts  auth.ts  error.ts  plopGenerator.ts  project.ts  user.ts  validation.ts
templates/base-js/: index.js.hbs  package.json
templates/base-py/: main.py.hbs  pyproject.toml
templates/base-ts/: nestbox-agents.yaml.hbs  nestbox.config.json  package.json  tsconfig.json
templates/chatbot-js/: index.js.hbs  package-lock.json  package.json
templates/chatbot-py/: .gitignore  main.py.hbs  pyproject.toml
templates/chatbot-ts/: package.json
templates/template-base-js/: index.js.hbs  package.json
templates/template-base-ts/: package.json
test/: README.md  agent.test.ts  auth.test.ts  compute.test.ts  docProc.test.ts  document.test.ts  generate.test.ts  image.test.ts  mocks.ts  project.test.ts  projects.test.ts  setup.ts
(+55 files in other folders)
