[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "1.0.0"
description = "Nestbox AI Python Agent"
requires-python = ">=3.9"

dependencies = [
    "nestbox-ai-functions>=2.0.3",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0"
]

[tool.setuptools]
packages = ["."]
