[project]
name = "app"
description = "Nestbox Python Chatbot"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "nestbox-ai-functions>=2.0.3",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
